# NuRaft

./: .bazelrc  .clang-format  .codecov.yml  .gitignore  .gitmodules  .travis.yml  BUILD.bazel  CLAUDE.md  CMakeLists.txt  NuRaftConfig.cmake.in  README.md  WORKSPACE  cert.pem  conanfile.py  github_action_build.sh  key.pem  manifest.sh  mr.md  notes.md  plan.md  prepare.sh  travis_build.sh
.github/: dependabot.yml
.github/workflows/: bazel.yml  cmake.yml
bazel/: get_workspace_status  repository.bzl
cmake/: CodeCoverage.cmake
docs/: async_replication.md  basic_operations.md  bench_results.md  custom_commit_policy.md  custom_metadata.md  custom_quorum_size.md  custom_resolver.md  customizing_asio.md  dealing_with_buffer.md  enabling_ssl.md  how_to_use.md  leader_election_priority.md  leadership_expiration.md  log_timestamp.md  parallel_log_appending.md  port-sharing-design.md  port-sharing-test-plan.md  port_sharing_mode.md  prevote_protocol.md  quick_start_guide.md  quick_tutorial.md  readonly_member.md  replication_flow.md  snapshot_transmission.md  streaming_mode.md
examples/: BUILD.bazel  CMakeLists.txt  README.md  backtrace.h  example_common.hxx  file_based_log_store.cxx  file_based_log_store.hxx  file_based_state_mgr.hxx  in_memory_log_store.cxx  in_memory_log_store.hxx  in_memory_state_mgr.hxx  logger.cc  logger.h  logger_wrapper.hxx  quick_start.cxx
examples/calculator/: BUILD.bazel  README.md  calc_server.cxx  calc_state_machine.hxx
examples/echo/: BUILD.bazel  README.md  echo_server.cxx  echo_state_machine.hxx
examples/task_scheduler/: README.md  task_scheduler.cxx  task_scheduler_state_machine.hxx
examples/task_scheduler/include/: policy.hxx  queue.hxx  scheduler.hxx  task.hxx  utils.hxx
examples/task_scheduler/src/: policy.cxx  scheduler.cxx  task.cxx  utils.cxx
include/: buffer_serializer.hxx  callback.hxx  error_code.hxx  log_entry.hxx  log_store.hxx  nuraft.hxx  peer.hxx  pp_util.hxx  ptr.hxx  raft_params.hxx  req_msg.hxx  rpc_cli.hxx  rpc_cli_factory.hxx  snapshot.hxx  srv_config.hxx  srv_state.hxx  state_machine.hxx  state_mgr.hxx  timer_task.hxx
include/libnuraft/: asio_service.hxx  asio_service_options.hxx  async.hxx  attr_unused.hxx  basic_types.hxx  buffer.hxx  buffer_serializer.hxx  callback.hxx  cluster_config.hxx  context.hxx  debugging_options.hxx  delayed_task.hxx  delayed_task_scheduler.hxx  error_code.hxx  event_awaiter.hxx  global_mgr.hxx  internal_timer.hxx  launcher.hxx  log_entry.hxx  log_store.hxx  log_val_type.hxx  logger.hxx  msg_base.hxx  msg_type.hxx  nuraft.hxx  peer.hxx  pp_util.hxx  ptr.hxx  raft_group_dispatcher.hxx  raft_params.hxx  raft_server.hxx  raft_server_handler.hxx  req_msg.hxx  resp_msg.hxx  rpc_cli.hxx  rpc_cli_factory.hxx  rpc_exception.hxx  rpc_listener.hxx  snapshot.hxx  snapshot_sync_ctx.hxx  (+8 more)
scripts/test/: lcov_cobertura.py  runtests.sh
src/: asio_service.cxx  buffer.cxx  buffer_serializer.cxx  cluster_config.cxx  crc32.cxx  crc32.hxx  error_code.cxx  event_awaiter.h  exit_handler.hxx  fix_format.hxx  global_mgr.cxx  handle_append_entries.cxx  handle_client_request.cxx  handle_client_request.hxx  handle_commit.cxx  handle_custom_notification.cxx  handle_custom_notification.hxx  handle_join_leave.cxx  handle_priority.cxx  handle_snapshot_sync.cxx  handle_timeout.cxx  handle_user_cmd.cxx  handle_vote.cxx  histogram.h  launcher.cxx  log_entry.cxx  mock_ssl.hxx  peer.cxx  raft_group_dispatcher.cxx  raft_server.cxx  raft_server_handler.hxx  snapshot.cxx  snapshot_sync_ctx.cxx  snapshot_sync_req.cxx  srv_config.cxx  stat_mgr.cxx  stat_mgr.hxx  tracer.hxx
tests/: BUILD.bazel  CMakeLists.txt  test_common.h
tests/asio/: asio_service_test.cxx  asio_test_common.hxx  custom_quorum_test.cxx  port_sharing_test.cxx  req_resp_meta_test.cxx
tests/bench/: README.md  ashared_ptr.h  histogram.h  latency_collector.h  latency_dump.h  raft_bench.cxx
tests/integration/: port_sharing_test.cxx
tests/unit/: BUILD.bazel  asio_service_stream_test.cxx  asio_service_test.cxx  asio_stream_test.cxx  buffer_test.cxx  cert.csr  dispatcher_test.cxx  failure_test.cxx  fake_executer.hxx  fake_network.cxx  fake_network.hxx  launcher_test.cxx  leader_election_test.cxx  learner_new_joiner_test.cxx  logger_test.cxx  new_joiner_test.cxx  raft_functional_common.hxx  raft_package_asio.hxx  raft_package_fake.hxx  raft_server_test.cxx  serialization_test.cxx  snapshot_test.cxx  stat_mgr_test.cxx  stream_functional_test.cxx  strfmt_test.cxx  test_bug8_config_guard.cxx  timer_test.cxx
